# infoc-nhf

./: .clangd  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  DEVELOPER_GUIDE.md  README.md  SPECIFICATION.md  STRUCTURE.md  USER_GUIDE.md  b.sh  br.sh  default.nix  draw.c  draw.h  geom.c  geom.h  geom_defs.c  geom_defs.h  geom_state.c  geom_state.h  hover.c  hover.h  main.c  package.nix  r.sh  savedata.c  savedata.h  shell.nix  state.c  state.h  view.c  view.h
geom/: defs.c  defs.h  state.c  state.h  util.c  util.h
mode/: category_defs.c  category_defs.h  circle.c  circle.h  circle_by_len.c  circle_by_len.h  defs.c  defs.h  delete.c  delete.h  line.c  line.h  linelike.c  linelike.h  midpoint.c  midpoint.h  move.c  move.h  par_per.c  par_per.h  point.c  point.h  util.c  util.h
save/: data.c  data.h  dialog.c  dialog.h
